// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruevas en <GifExpertApp/> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Batman"
      key="Batman"
    />
    <GifGrid
      category="Hola"
      key="Hola"
    />
  </ol>
</Fragment>
`;

exports[`Pruevas en <GifExpertApp/> Debe demostarse correctamente el componente 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
